Freedom Sanbox Ant Deploy/src/objects/Notification_Queue__c.object
<CustomObject>
    <fields>
        <fullName>Biz_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Biz Unit</label>
        <referenceTo>Business_Unit__c</referenceTo>
        <relationshipLabel>Notification Queues</relationshipLabel>
        <relationshipName>Notification_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel_Type__c</fullName>
        <label>Channel Type</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Custom_ID__c</fullName>
        <label>Custom ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Object_Type__c</fullName>
        <label>Custom Object Type</label>
        <picklist>
            <picklistValues>
                <fullName>Task</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Notification Queues</relationshipLabel>
        <relationshipName>Notification_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event_Master__c</referenceTo>
        <relationshipLabel>Notification Queues</relationshipLabel>
        <relationshipName>Notification_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Id__c</fullName>
        <label>Lead Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Id__c</fullName>
        <label>Member Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Timestamp__c</fullName>
        <label>Notification Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Partner_Id__c</fullName>
        <label>Partner Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayloadXML__c</fullName>
        <label>PayloadXML</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reject_Reason__c</fullName>
        <label>Reject Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Details</label>
        <referenceTo>Team_Member__c</referenceTo>
        <relationshipLabel>Notification Queues</relationshipLabel>
        <relationshipName>Notification_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Notification Queue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>Event__c</columns>
        <columns>Member_Id__c</columns>
        <columns>Partner_Id__c</columns>
        <columns>Biz_Unit__c</columns>
        <columns>Priority__c</columns>
        <columns>Channel_Type__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NQ-{0000}</displayFormat>
        <label>Notification Queue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notification Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>